<resources>
    <string name="app_name">GroupMeBot</string>
    <string name="action_settings">Settings</string>
    <string name="group_name">Group Name</string>
    <string name="bot_name">Bot Name</string>
    <string name="group_name_optional">Group Name (Optional)</string>
    <string name="bot_name_optional">Bot Name (Optional)</string>
    <string name="bot_id">Bot ID</string>
    <string name="add_bot">Add Bot</string>
    <string name="avatar_img_desc">Bot Avatar Image</string>
    <string name="remove_bot_desc">Remove bot button</string>
    <string name="title_activity_bot_view">BotViewActivity</string>
    <string name="send_message_tab">Message</string>
    <string name="info_tab">Info</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_bot">Remove Bot</string>
    <string name="edit_bot">Edit Bot</string>
    <string name="save_changes">Save Changes</string>
    <string name="message_text">Message Text</string>
    <string name="clear_message">Clear</string>
    <string name="send_message">Send</string>
    <string name="add_attachment">Add Attachment</string>
    <string name="fab_manual_add">Add by ID</string>
    <string name="fab_login_add">Import from GroupMe account</string>
    <string name="sign_in">Login to GroupMe</string>
    <string name="cannot_load_bots">Unable to import bots from GroupMe</string>
    <string name="replace_bot_dialog_title">Bot already exists!</string>
    <string name="remember_choice">Remember my decision</string>
    <string name="replace">Replace</string>
    <string name="skip">Skip</string>
</resources>
