<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.moghies.gmbot.fragment.BotInfoFragment">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtBotIdWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtBotId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:enabled="false"

            android:hint="@string/bot_id" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtBotNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@id/txtBotIdWrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtBotName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:enabled="false"

            android:hint="@string/bot_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtBotGroupWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@id/txtBotNameWrapper">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtBotGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:enabled="false"

            android:hint="@string/group_name" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnEdit"
        android:text="@string/edit_bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@style/Widget.AppCompat.Button"
        android:layout_margin="5dp"

        app:layout_constraintBottom_toTopOf="@id/btnRemove"/>

    <Button
        android:id="@+id/btnRemove"
        android:text="@string/remove_bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/AppTheme.RemoveButton"
        android:layout_margin="5dp"

        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>
