<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvAddBot"
        android:text="@string/add_bot"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        style="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"

        app:layout_constraintTop_toTopOf="parent"

        android:textAlignment="center"
        android:layout_margin="10dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtBotIdWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tvAddBot">

        <EditText
            android:id="@+id/txtBotId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/bot_id"

            android:layout_margin="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtBotNameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/txtBotIdWrapper">

        <EditText
            android:id="@+id/txtBotName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/bot_name"

            android:layout_margin="10dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/txtBotNameWrapper">

    <EditText
        android:id="@+id/txtBotGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/group_name"

        android:layout_margin="10dp" />

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
