<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tvReplaceBotTitle"
        android:text="@string/replace_bot_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        style="@style/TextAppearance.AppCompat.Title"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        style="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        tools:text="1 of 23" />

    <TextView
        android:id="@+id/tvReplaceBotMessage"
        tools:text="That bot already exists, do you want to replace it skip adding this bot?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        style="@style/TextAppearance.AppCompat.Body1"

        app:layout_constraintTop_toBottomOf="@id/tvReplaceBotTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <CheckBox
        android:id="@+id/chkRememberChoice"
        android:text="@string/remember_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"

        app:layout_constraintTop_toBottomOf="@id/tvReplaceBotMessage"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btnReplace"
        android:text="@string/replace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimary"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkRememberChoice"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnSkip"
        android:text="@string/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimary"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkRememberChoice"
        app:layout_constraintRight_toLeftOf="@id/btnReplace"/>

</android.support.constraint.ConstraintLayout>